NetBSD Problem Report #43364

From njoly@lanfeust.sis.pasteur.fr  Wed May 26 13:18:28 2010
Return-Path: <njoly@lanfeust.sis.pasteur.fr>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 401C163B873
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 26 May 2010 13:18:28 +0000 (UTC)
Message-Id: <20100526131824.A15F1DC9B9@lanfeust.sis.pasteur.fr>
Date: Wed, 26 May 2010 15:18:24 +0200 (CEST)
From: njoly@pasteur.fr
Reply-To: njoly@pasteur.fr
To: gnats-bugs@gnats.NetBSD.org
Subject: mkdep(1) wrong target names when suffix list miss .o
X-Send-Pr-Version: 3.95

>Number:         43364
>Category:       bin
>Synopsis:       mkdep(1) wrong target names when suffix list miss .o
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed May 26 13:20:00 +0000 2010
>Closed-Date:    Thu May 27 05:53:55 +0000 2010
>Last-Modified:  Thu May 27 05:53:55 +0000 2010
>Originator:     Nicolas Joly
>Release:        NetBSD 5.99.29
>Organization:
Institut Pasteur
>Environment:
System: NetBSD lanfeust.sis.pasteur.fr 5.99.29 NetBSD 5.99.29 (LANFEUST) #1: Wed May 26 11:48:35 CEST 2010 njoly@lanfeust.sis.pasteur.fr:/local/src/NetBSD/obj.amd64/sys/arch/amd64/compile/LANFEUST amd64
Architecture: x86_64
Machine: amd64
>Description:
When suffix list miss .o, mkdep(1) fails to generate expected target names.

njoly@lanfeust [~]> echo "int main() { return 0; }" >main.c
njoly@lanfeust [~]> mkdep -f main.dep main.c 
njoly@lanfeust [~]> cat main.dep 
main.o: main.c
njoly@lanfeust [~]> mkdep -p -f main.dep main.c
njoly@lanfeust [~]> cat main.dep               
main.o: main.c
njoly@lanfeust [~]> mkdep -s '' -f main.dep main.c 
njoly@lanfeust [~]> cat main.dep                  
main.o: main.c
njoly@lanfeust [~]> mkdep -s '.a .b' -f main.dep main.c
njoly@lanfeust [~]> cat main.dep                       
main.o: main.c
njoly@lanfeust [~]> mkdep -s '.a .b .o' -f main.dep main.c
njoly@lanfeust [~]> cat main.dep                          
main.a main.b main.o: main.c
>How-To-Repeat:
>Fix:

>Release-Note:

>Audit-Trail:
From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43364 CVS commit: src/usr.bin/mkdep
Date: Wed, 26 May 2010 11:04:40 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Wed May 26 15:04:40 UTC 2010

 Modified Files:
 	src/usr.bin/mkdep: mkdep.c

 Log Message:
 PR/43364: Nicolas Joly: mkdep(1) wrong target names when suffix list miss .o


 To generate a diff of this commit:
 cvs rdiff -u -r1.33 -r1.34 src/usr.bin/mkdep/mkdep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Nicolas Joly <njoly@pasteur.fr>
To: gnats-bugs@NetBSD.org
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org, njoly@pasteur.fr
Subject: Re: PR/43364 CVS commit: src/usr.bin/mkdep
Date: Wed, 26 May 2010 17:53:48 +0200

 On Wed, May 26, 2010 at 03:05:04PM +0000, Christos Zoulas wrote:
 > The following reply was made to PR bin/43364; it has been noted by GNATS.
 > 
 > From: Christos Zoulas <christos@netbsd.org>
 > To: gnats-bugs@gnats.NetBSD.org
 > Cc: 
 > Subject: PR/43364 CVS commit: src/usr.bin/mkdep
 > Date: Wed, 26 May 2010 11:04:40 -0400
 > 
 >  Module Name:	src
 >  Committed By:	christos
 >  Date:		Wed May 26 15:04:40 UTC 2010
 >  
 >  Modified Files:
 >  	src/usr.bin/mkdep: mkdep.c
 >  
 >  Log Message:
 >  PR/43364: Nicolas Joly: mkdep(1) wrong target names when suffix list miss .o

 Thanks Christos,

 The problem is fixed, except for an empty list (-s '' or -p) :

 njoly@lanfeust [~]> mkdep -p -f main.dep main.c
 njoly@lanfeust [~]> cat main.dep
 : main.c
 njoly@lanfeust [~]> mkdep -s '' -f main.dep main.c
 njoly@lanfeust [~]> cat main.dep
 : main.c

 -- 
 Nicolas Joly

 Biological Software and Databanks.
 Institut Pasteur, Paris.

From: christos@zoulas.com (Christos Zoulas)
To: Nicolas Joly <njoly@pasteur.fr>, gnats-bugs@NetBSD.org
Cc: gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: PR/43364 CVS commit: src/usr.bin/mkdep
Date: Wed, 26 May 2010 14:07:53 -0400

 On May 26,  5:53pm, njoly@pasteur.fr (Nicolas Joly) wrote:
 -- Subject: Re: PR/43364 CVS commit: src/usr.bin/mkdep

 | Thanks Christos,
 | 
 | The problem is fixed, except for an empty list (-s '' or -p) :
 | 
 | njoly@lanfeust [~]> mkdep -p -f main.dep main.c
 | njoly@lanfeust [~]> cat main.dep
 | : main.c
 | njoly@lanfeust [~]> mkdep -s '' -f main.dep main.c
 | njoly@lanfeust [~]> cat main.dep
 | : main.c

 Fixed, thanks.

 christos

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Thu, 27 May 2010 05:53:55 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.