PR/43364: Nicolas Joly: mkdep(1) wrong target names when suffix list miss .o